# comlint_cpp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml  linux-release-build.yml  windows-release-build.yml
example/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt  parsing_example_main.cpp  running_example_main.cpp
examples/comlint_cpp/: ComlintCpp.lib
examples/comlint_cpp/include/: export_comlint_api.hpp  interface_helper.hpp  types.hpp
examples/comlint_cpp/include/exceptions/: missing_option_value.hpp
include/: command_line_element_type.hpp  command_line_interface.hpp  command_properties.hpp  interface_helper.hpp  interface_validator.hpp  parsed_command.hpp  types.hpp  utils.hpp
include/comlint/: command_handler_interface.hpp  command_line_interface.hpp  command_properties.hpp  flag_properties.hpp  interface_helper.hpp  interface_validator.hpp  option_properties.hpp  parsed_command.hpp  utils.hpp
include/comlint/exceptions/: comlint_exception.hpp  duplicated_command.hpp  duplicated_flag.hpp  duplicated_option.hpp  forbidden_flag.hpp  forbidden_option.hpp  forbidden_option_value.hpp  invalid_command_handler.hpp  invalid_command_name.hpp  invalid_command_position.hpp  invalid_flag_name.hpp  invalid_option_name.hpp  missing_command_handler.hpp  missing_command_value.hpp  missing_required_option.hpp  unsupported_command.hpp  unsupported_command_value.hpp
include/exceptions/: comlint_exception.hpp  unsupported_flag.hpp  unsupported_option.hpp
scripts/: build.bat  build.sh  smoke_tests.bat  smoke_tests.sh
src/: command_line_interface.cpp  interface_helper.cpp  interface_validator.cpp  parsed_command.cpp  utils.cpp
test/: CMakeLists.txt  example_test.cpp  test_command_line_interface.cpp  test_command_properties.cpp  test_interface_helper.cpp  test_interface_validator.cpp  test_parsed_command.cpp  test_utils.cpp
test/test_command_line_interface/: mock_command_handler.hpp  test_basic_features.cpp  test_command_handlers.cpp  test_multiple_value_commands.cpp  test_negative_cases.cpp  test_non_command_based_interface.cpp  test_non_value_commands.cpp  test_single_value_commands.cpp
